preview per cellulare

--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -169,8 +169,8 @@
                                 </div>
                                 <div
                                     class="col-6 flex justify-content-end align-content-center align-items-center">
-                                    <p-menu #menu [model]="items_elabel" [popup]="true" />
-                                    <p-button (onClick)="menu.toggle($event)" icon="pi pi-ellipsis-v"
+                                    <p-menu #menu_elabel [model]="items_elabel" [popup]="true" />
+                                    <p-button (onClick)="menu_elabel.toggle($event)" icon="pi pi-ellipsis-v"
                                         styleClass="p-button-sm p-button-outlined p-button-secondary"
                                         class="flex md:hidden" />
 
