--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -99,9 +99,10 @@
                                 href="javascript:void(0)">{{item.name}}</a>
                         </div>
                         <div class="col-6 flex justify-content-end align-content-center align-items-center my-0 py-0">
-                            <p-menu #menu [model]="items_brand" [popup]="true" />
-                            <p-button (onClick)="menu.toggle($event)" icon="pi pi-ellipsis-v"
-                                styleClass="p-button-sm p-button-outlined p-button-secondary" class="flez md:hidden" />
+                            <p-menu #menu_elabel [model]="items_elabel" [popup]="true" />
+                            <p-button (onClick)="menu_elabel.toggle($event)" icon="pi pi-ellipsis-v"
+                                styleClass="p-button-sm p-button-outlined p-button-secondary"
+                                class="flex md:hidden" />
 
                             <p-button icon="pi pi-pencil" pTooltip="Modifica Brand" (click)="editBrand(item.id)"
                                 styleClass="p-button-sm p-button-outlined p-button-secondary"
@@ -109,7 +110,7 @@
                             <p-button icon="pi pi-qrcode" pTooltip="QrCode"
                                 styleClass="p-button-sm p-button-outlined p-button-secondary"
                                 class="hidden md:flex mx-1"></p-button>
-                            <p-button icon="pi pi-plus" pTooltip="Nuova E-Label" (click)="createElabelByBrand()"
+                            <p-button icon="pi pi-plus" pTooltip="Nuova E-Label" (click)="createElabelByBrand(item)"
                                 styleClass="p-button-sm p-button-outlined p-button-secondary"
                                 class="hidden md:flex mx-1"></p-button>
                         </div>
@@ -249,7 +250,7 @@
                         </div>
                     </div>
                 </p-tabPanel>
-                <p-tabPanel header="{{ 'pages.dashboard.cards.published' | translate }} (0)" class="line-height-3 m-0">
+                <p-tabPanel header="{{ 'pages.dashboard.cards.published' | translate }} ({{labelsPublishied.length}})" class="line-height-3 m-0">
                     <div *ngFor="let label of labels"
                         class="flex m-0 h-16 w-full items-center justify-between rounded-sm border border-solid bg-white px-2 md:pr-4 md:pl-2 my-1"
                         style="border-color: rgb(203, 213, 225);">
@@ -299,7 +300,7 @@
                         </div>
                     </div>
                 </p-tabPanel>
-                <p-tabPanel header="{{ 'pages.dashboard.cards.draft' | translate }} (0)" class="line-height-3 m-0">
+                <p-tabPanel header="{{ 'pages.dashboard.cards.draft' | translate }} ({{labelsDraft.length}})" class="line-height-3 m-0">
                     <div *ngFor="let label of labels"
                         class="flex m-0 h-16 w-full items-center justify-between rounded-sm border border-solid bg-white px-2 md:pr-4 md:pl-2 my-1"
                         style="border-color: rgb(203, 213, 225);">
@@ -412,6 +413,9 @@
                         url="https://app.eulabel.it/backend/brand-image/{{form.get('id').value}}" accept="image/*"
                         maxFileSize="1000000" [auto]="true" (onUpload)="onBasicUploadBrand()" chooseLabel="Browse" />
                 </div>
+                <div class="col-12">
+                    <span><b>Colore primario</b><ngx-colors ngx-colors-trigger style="display: inline-block; margin:5px;" [formControl]="form.get('color')"></ngx-colors></span>
+                </div>                
             </div>
         </div>
     </div>
