--- a/src/app/demo/components/elabel/elabel.component.html
+++ b/src/app/demo/components/elabel/elabel.component.html
@@ -8,17 +8,23 @@
             </div>
 
             <div class="flex align-items-right ">
-                <p-tag styleClass="p-mr-2" con="pi pi-exclamation-triangle" severity="warning" value="bozza"></p-tag>
+                <p-tag styleClass="p-mr-2" con="pi pi-exclamation-triangle" severity="warning" [value]="form.get('status').value == 0 ? 'Bozza' : 'Pubblicato'"></p-tag>
             </div>
 
             <div class="flex align-items-center md:align-items-right text-center">
 
-                <p-button icon="pi pi-qrcode" label="Scarica il QrCode" pTooltip="Scarica il codice QR"
-                    styleClass="p-button-sm p-button-outlined p-button-secondary" [routerLink]="['/elabel/']"
-                    class="mr-3"></p-button>
-                <p-button icon="pi pi-clock" pTooltip="Pubblica E-Label" label="Pubblica E-Label"
+                <p-button (click)="qrDialog = true" icon="pi pi-qrcode" label="Scarica il QrCode" pTooltip="Scarica il codice QR"
                     styleClass="p-button-sm p-button-outlined p-button-secondary"
-                    [routerLink]="['/elabel/']"></p-button>
+                    class="mr-3"></p-button>
+                <ng-container *ngIf="form.get('status').value == 0">
+                    <p-button (click)="changeStatus()" icon="pi pi-clock" pTooltip="Pubblica E-Label" label="Pubblica E-Label"
+                    styleClass="p-button-sm p-button-outlined p-button-secondary"></p-button>
+                </ng-container>
+                <ng-container *ngIf="form.get('status').value == 1">
+                    <p-button (click)="changeStatus()" icon="pi pi-clock" pTooltip="Sposta in bozza" label="Sposta in bozza"
+                    styleClass="p-button-sm p-button-outlined p-button-secondary"></p-button>
+                </ng-container>
+                    
             </div>
 
         </div>
@@ -72,7 +78,15 @@
                                             <app-infobutton
                                                 [label]="'pages.elabel.form.country.helper'"></app-infobutton>
                                             🇪🇺</label>
-                                      <!--   <input pInputText id="country" [formControl]="form.get('country')" /> -->
+                                            <p-dropdown [options]="brands" [formControl]="form.get('brand_id')"
+                                                [showClear]="true" placeholder="Seleziona">
+                                                <ng-template let-option pTemplate="selectedItem">
+                                                    <span>{{option.name | translate}}</span>
+                                                </ng-template>
+                                                <ng-template  let-option pTemplate="item">
+                                                    <span>{{option.name | translate}}</span>
+                                                </ng-template>                                                
+                                             </p-dropdown>
 
                                         <p-dropdown [options]="states" [formControl]="form.get('country')"
                                         [showClear]="true" [filter]="true" filterBy="nome_stati" placeholder="Seleziona">
@@ -222,13 +236,14 @@
                                         </div>
                                     </ng-template>
                                     <ng-template let-option pTemplate="item">
-                                       
-                                        <span>{{option.label | translate}}</span> <p-tag *ngIf="option.allergenies!=null" severity="warning" value="Allergene: "/>
+                                        <div  [ngClass]="isIngredientNotInUse(option) ? '' : 'optionDisabled'">
+                                            <span>{{option.label | translate}}</span> <p-tag *ngIf="option.allergenies!=null" severity="warning" class="ml-3" value="Allergene: {{option.allergenies | translate}}"/>
+                                        </div>
                                     </ng-template>
                                 </p-dropdown>
                             </div>
                             <div class="col-12">
-                                    <div class="card" *ngFor="let e of ingredientPicked">
+                                    <div class="card" *ngFor="let e of ingredientPicked; let i = index">
                                     <div class="grid">
                                         <div class="col-9">
                                             <b>{{e.label | translate}}</b>
@@ -237,7 +252,7 @@
                                         <div class="col-3 flex justify-content-end align-items-right">
                                             <p-button icon="pi pi-trash" pTooltip="Rimuovi"
                                                 styleClass="p-button-sm p-button-outlined p-button-secondary"
-                                                (click)="onDeleteIngredient(e.id)"></p-button>
+                                                (click)="onDeleteIngredient(i, e.id)"></p-button>
                                         </div>
                                     </div>
                                 </div>
@@ -428,13 +443,18 @@
                                                         [formControl]="rules.at(i).get('recycling_rule_containers_id')"
                                                         [options]="containers" [group]="true" [showClear]="true"
                                                         placeholder="Seleziona">
+                                                        <ng-template let-option pTemplate="selectedItem">
+                                                            <span>{{option.label | translate}}</span>
+                                                        </ng-template>
                                                         <ng-template let-group pTemplate="group">
                                                             <div class="flex align-items-center">
                                                                 <span>{{ group.label | translate }}</span>
                                                             </div>
                                                         </ng-template>
                                                         <ng-template let-option pTemplate="item">
-                                                            <span>{{option.label | translate}}</span>
+                                                            <div [ngClass]="isContainerNotInUse(option) ? '' : 'optionDisabled'">
+                                                                <span>{{option.label | translate}}</span>
+                                                            </div>
                                                         </ng-template>
                                                     </p-dropdown>
                                                 </div>
@@ -445,13 +465,18 @@
                                                     <p-dropdown [options]="materials" [group]="true"
                                                         [formControl]="rules.at(i).get('recycling_rule_materials_id')"
                                                         [showClear]="true" placeholder="Seleziona">
+                                                        <ng-template let-option pTemplate="selectedItem">
+                                                            <span>{{option.label | translate}}</span>
+                                                        </ng-template>
                                                         <ng-template let-group pTemplate="group">
                                                             <div class="flex align-items-center">
                                                                 <span>{{ group.label | translate }}</span>
                                                             </div>
                                                         </ng-template>
                                                         <ng-template let-option pTemplate="item">
-                                                            <span>{{option.label | translate}}</span>
+                                                            <div [ngClass]="isMaterialNotInUse(option) ? '' : 'optionDisabled'">
+                                                                <span>{{option.label | translate}}</span>
+                                                            </div>
                                                         </ng-template>
                                                     </p-dropdown>
                                                 </div>
@@ -572,7 +597,7 @@
                                 styleClass="p-button-sm p-button-danger"></p-button>
                             <p-button label="Indietro" (click)="back()" icon="pi pi-trash"
                                 styleClass="p-button-sm p-button-secondary"></p-button>
-                            <p-button label="Salva" (click)="save()" icon="pi pi-trash"
+                            <p-button [disabled]="!form.valid"  label="Salva" (click)="save()" icon="pi pi-trash"
                                 styleClass="p-button-sm p-button-success"></p-button>
                         </div>
                     </div>
@@ -592,6 +617,7 @@
         [types]="types" 
         [geoGraphicalIndication]="geographical_indication"
         [preview_image]="preview_image" 
+        [preview]="false"
         [sub_image]="sub_image" 
         [form]="form" class="col-12 lg:col-4 xl:col-3 hidden lg:block"></app-preview>
 
@@ -607,8 +633,23 @@
     [geoGraphicalIndication]="geographical_indication"
     [preview_image]="preview_image" 
     [sub_image]="sub_image" 
-    [form]="form" class="col-12 lg:col-4 xl:col-3 block lg:hidden"></app-preview>
+    [preview]="true"
+    [form]="form" class="col-12 lg:col-4 xl:col-3 block lg:hidden flex flex-column justify-content-center align-items-center"></app-preview>
 </p-sidebar>
 <div class="fixed bottom-2 right-2 block lg:hidden">
-<p-button (onClick)="sidebarVisible = true" icon="pi pi-eye" pTooltip="Live preview" />
+<p-button (onClick)="sidebarVisible = true && preview=true" icon="pi pi-eye" pTooltip="Live preview" />
 </div>
+
+<p-dialog header="Codice qr" 
+    [(visible)]="qrDialog" 
+    [modal]="true" 
+    showEffect="fade" [style]="{width: '30vw'}" [breakpoints]="{'960px': '75vw'}">
+    <div #qrcodewrapper>
+        <qrcode *ngIf="form.get('qr').value" [qrdata]="form.get('qr').value" [errorCorrectionLevel]="'M'"></qrcode>
+        <button pButton icon="pi pi-download" (click)="downloadCanvas()" label="Scarica" class="p-button-outlined"></button>
+
+    </div>
+    <ng-template pTemplate="footer">
+            <button pButton icon="pi pi-check" (click)="display=false" label="Ok" class="p-button-outlined"></button>
+    </ng-template>
+</p-dialog>
